monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "traefik"            
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
spec:
  rules:
    - host: grafana.HOSTNAME.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.HOSTNAME.com
      secretName: grafana-tls
